# Poca

./: Cargo.toml  LICENSE
client/: package.json  tsconfig.json
client/src/: index.test.ts  index.ts
examples/guessing_game/: Cargo.toml
examples/guessing_game/frontend/: index.html  package.json  vite.config.js
examples/guessing_game/frontend/src/: interface.ts  main.ts
examples/guessing_game/src/: main.rs
macro/: Cargo.toml
macro/examples/: include.rs
macro/examples/public/css/: index.css
macro/examples/public/html/: about.html  index.html
macro/src/: lib.rs
server/: .vimspector.json  Cargo.toml
server/examples/: ws_server.rs
server/examples/resources/: index.html
server/src/: app_routes.rs  data_handle.rs  event_handler.rs  lib.rs  message.rs  poca.rs  synchronizable.rs  ws_handler.rs
server/tests/: basics.rs  get_routes.rs  todo.rs
tero-client/: Cargo.toml  LICENSE_MIT
tero-client/src/: lib.rs
tero-server/: Cargo.toml
tero-server/examples/: ws_server.rs
tero-server/src/: data_handle.rs  event_handler.rs  lib.rs  message.rs  synchronizable.rs  tero.rs  ws_handler.rs
tero-server/tests/: basics.rs  todo.rs
unroll-client/: Cargo.toml  jest.config.js  package.json  tsconfig.json
unroll-client/src/: index.test.ts  index.ts  lib.rs
unroll-server/: Cargo.toml
unroll-server/examples/: ws_server.rs
unroll-server/src/: data_handle.rs  lib.rs  unroll.rs  ws_handler.rs
unroll-server/tests/: basics.rs  todo.rs
