[package]
name = "poca-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dyn-clone = "1.0.4"
flexbuffers = "2.0.0"
futures-util = "0.3.18"
parking_lot = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
serde_repr = "0.1.7"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-tungstenite = "0.16.0"
tungstenite = "0.16.0"
warp = "0.3.2"

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
