[package]
name = "tero-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
futures-channel = "0.3.17"
futures-util = "0.3.18"
parking_lot = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-tungstenite = "0.16.0"
tungstenite = "0.16.0"
typetag = "0.1.8"
